docker files added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,14 @@
+server:
+  port: 8085
 spring:
   application:
     name: customer-info
   active:
     profile: local
+management:
+  security:
+    enabled: false
+  enabled:
+    web:
+      exposure:
+        include: "*"
